# web-source-compiler

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  studfile.yaml
examples/: .wsc.yaml  README.md  index.wsc
web_source_compiler/: __init__.py  cli.py  compiler.py  config.py
